update air component

--- a/src/app/pages/trucking/air/air.component.html
+++ b/src/app/pages/trucking/air/air.component.html
@@ -4,15 +4,27 @@
   <div>
     <label for="coName">Company:</label><br>
     <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
+    <span>
+      <label for="qty">Quantity:</label>
+      <input type="number" id="qty" name="qty" value="">
+    </span>
+
+    <span>
+      <label for="wgt">Weight:</label>
+      <input type="number" id="wgt" name="wgt" value="">
+    </span>
+<br>
+
+
     <label for="delDate">Delivery Date:</label><br>
     <input type="date" id="delDate" name="delDate" value=""><br>
-    <label for="delTime">AM or PM ?</label>
+    <label for="delTime">AM or PM ?</label> <br>
     <select for="delTime" id="delTime">
       <option value="am">AM</option>
       <option value="pm">PM</option>
     </select> <br> <br>
   </div>
-  
+
   <div>
     <label for="coName">Company:</label><br>
     <input type="text" id="coName" name="coName" value="ABC Co., Ltd."><br>
@@ -22,7 +34,7 @@
     <select name="delTime" id="delTime">
       <option value="am">AM</option>
       <option value="pm">PM</option>
-    </select> <br> <br> 
+    </select> <br> <br>
   </div>
   <div>
     <label for="coName">Company:</label><br>
@@ -219,7 +231,7 @@
     <select name="delTime" id="delTime">
       <option value="am">AM</option>
       <option value="pm">PM</option>
-    </select> <br> <br> 
+    </select> <br> <br>
   </div>
 
   <div>
@@ -232,7 +244,7 @@
     <select name="delTime" id="delTime">
       <option value="am">AM</option>
       <option value="pm">PM</option>
-    </select> <br> <br> 
+    </select> <br> <br>
     </div>
   <div>
     <label for="coName">Company:</label><br>
@@ -244,7 +256,7 @@
     <select name="delTime" id="delTime">
       <option value="am">AM</option>
       <option value="pm">PM</option>
-    </select> <br> <br> 
+    </select> <br> <br>
   </div>
   <div>
     <label for="coName">Company:</label><br>
@@ -256,7 +268,7 @@
     <select name="delTime" id="delTime">
       <option value="am">AM</option>
       <option value="pm">PM</option>
-    </select> <br> <br> 
+    </select> <br> <br>
   </div>
 
   <div>
@@ -269,7 +281,7 @@
     <select name="delTime" id="delTime">
       <option value="am">AM</option>
       <option value="pm">PM</option>
-    </select> <br> <br> 
+    </select> <br> <br>
     </div>
   <div>
     <label for="coName">Company:</label><br>
@@ -281,7 +293,7 @@
     <select name="delTime" id="delTime">
       <option value="am">AM</option>
       <option value="pm">PM</option>
-    </select> <br> <br> 
+    </select> <br> <br>
   </div>
   <div>
     <label for="coName">Company:</label><br>
@@ -293,7 +305,7 @@
     <select name="delTime" id="delTime">
       <option value="am">AM</option>
       <option value="pm">PM</option>
-    </select> <br> <br> 
+    </select> <br> <br>
   </div>
 
   <div>
@@ -306,7 +318,7 @@
     <select name="delTime" id="delTime">
       <option value="am">AM</option>
       <option value="pm">PM</option>
-    </select> <br> <br> 
+    </select> <br> <br>
     </div>
   <div>
     <label for="coName">Company:</label><br>
@@ -318,7 +330,7 @@
     <select name="delTime" id="delTime">
       <option value="am">AM</option>
       <option value="pm">PM</option>
-    </select> <br> <br> 
+    </select> <br> <br>
   </div>
   <div>
     <label for="coName">Company:</label><br>
@@ -330,7 +342,7 @@
     <select name="delTime" id="delTime">
       <option value="am">AM</option>
       <option value="pm">PM</option>
-    </select> <br> <br> 
+    </select> <br> <br>
   </div>
 
   <div>
@@ -343,7 +355,7 @@
     <select name="delTime" id="delTime">
       <option value="am">AM</option>
       <option value="pm">PM</option>
-    </select> <br> <br> 
+    </select> <br> <br>
     </div>
   <div>
     <label for="coName">Company:</label><br>
@@ -355,7 +367,7 @@
     <select name="delTime" id="delTime">
       <option value="am">AM</option>
       <option value="pm">PM</option>
-    </select> <br> <br> 
+    </select> <br> <br>
   </div>
   <div>
     <label for="coName">Company:</label><br>
@@ -367,7 +379,7 @@
     <select name="delTime" id="delTime">
       <option value="am">AM</option>
       <option value="pm">PM</option>
-    </select> <br> <br> 
+    </select> <br> <br>
   </div>
 
   <div>
@@ -380,7 +392,7 @@
     <select name="delTime" id="delTime">
       <option value="am">AM</option>
       <option value="pm">PM</option>
-    </select> <br> <br> 
+    </select> <br> <br>
     </div>
   <div>
     <label for="coName">Company:</label><br>
@@ -392,7 +404,7 @@
     <select name="delTime" id="delTime">
       <option value="am">AM</option>
       <option value="pm">PM</option>
-    </select> <br> <br> 
+    </select> <br> <br>
   </div>
   <div>
     <label for="coName">Company:</label><br>
@@ -404,9 +416,9 @@
     <select name="delTime" id="delTime">
       <option value="am">AM</option>
       <option value="pm">PM</option>
-    </select> <br> <br> 
+    </select> <br> <br>
   </div>
-  
+
 </div>
 
 <mat-grid-list cols="12" rowHeight="100px">
