--- a/src/app/pages/track-and-trace/ocean-import/ocean-import.component.html
+++ b/src/app/pages/track-and-trace/ocean-import/ocean-import.component.html
@@ -2,7 +2,7 @@
 <div class="container">
   <header>
     <!-- Header -->
-    <h1 style="font-weight: bolder; text-align: center;">Air Import Tracking</h1>
+    <h1 style="font-weight: bolder; text-align: center;">Ocean Import Tracking</h1>
   </header>
   <nav>
     <!-- Nav Bar -->
