--- a/src/app/account/auth/login02/login02.component.html
+++ b/src/app/account/auth/login02/login02.component.html
@@ -46,7 +46,7 @@
             Manufacturers / Shippers
           </mat-card-title>
         </mat-card-header>
-        <mat-card-content style="background-image: url('https://cdn.pixabay.com/photo/2022/01/16/13/25/cityscape-6942013__340.jpg') ">
+        <mat-card-content style="background-image: url('https://cdn.pixabay.com/photo/2022/01/16/13/25/cityscape-6942013__340.jpg'); background-size: contain; ">
           <ul style="font-weight: bolder; color:blanchedalmond ">Manufactuers / Shippers can
             <li>Apply for Customs' assigned number</li>
             <li>Obtain a continuous/annual bond</li>
@@ -67,7 +67,7 @@
             Importers / Exporters
           </mat-card-title>
         </mat-card-header>
-        <mat-card-content style="background-image: url('https://cdn.pixabay.com/photo/2022/01/10/15/29/wind-mills-6928590__340.jpg') ">
+        <mat-card-content style="background-image: url('https://cdn.pixabay.com/photo/2022/01/10/15/29/wind-mills-6928590__340.jpg'); background-size: contain; ">
           <ul style="font-weight: bolder; color:chartreuse">Importers or Exporters can
             <li>Check duty payments</li>
             <li>Detailed entry report</li>
@@ -88,7 +88,7 @@
             Freight Forwarders
         </mat-card-title>
       </mat-card-header>
-      <mat-card-content style="background-image: url('https://cdn.pixabay.com/photo/2015/01/09/11/08/startup-594090_960_720.jpg') ">
+      <mat-card-content style="background-image: url('https://cdn.pixabay.com/photo/2015/01/09/11/08/startup-594090_960_720.jpg'); background-size: contain; ">
             <ul style="font-weight: bolder; color:darkkhaki">Forwarders can
               <li>Check the entry status for clients</li>
               <li>Upload documents for Customs' clearance</li>
@@ -108,7 +108,7 @@
           Truckers
         </mat-card-title>
       </mat-card-header>
-      <mat-card-content style="background-image: url('https://cdn.pixabay.com/photo/2018/05/11/23/45/highway-3392100_960_720.jpg')">
+      <mat-card-content style="background-image: url('https://cdn.pixabay.com/photo/2018/05/11/23/45/highway-3392100_960_720.jpg'); background-size: contain;">
         <ul style="font-weight: bolder; color:rgb(238, 222, 5)">Truckers  can
           <li>Receive the delivery order</li>
           <li>Generate the invoice</li>
@@ -133,7 +133,7 @@
           CFS / Terminal Operators
         </mat-card-title>
       </mat-card-header>
-      <mat-card-content style="background-image: url('https://cdn.pixabay.com/photo/2018/01/14/15/53/hamburg-3082070_960_720.jpg') ">
+      <mat-card-content style="background-image: url('https://cdn.pixabay.com/photo/2018/01/14/15/53/hamburg-3082070_960_720.jpg'); background-size: contain; ">
         <ul style="font-weight: bolder; color:aliceblue">CFS or Terminal Operators can
           <li>Download Manifest</li>
           <li>Receive payments</li>
@@ -153,7 +153,7 @@
           Air Carriers
       </mat-card-title>
     </mat-card-header>
-    <mat-card-content style="background-image: url('https://cdn.pixabay.com/photo/2015/07/30/11/35/boeing-747-867517_960_720.jpg') ">
+    <mat-card-content style="background-image: url('https://cdn.pixabay.com/photo/2015/03/24/09/02/airport-687256_960_720.jpg'); background-size: contain; ">
           <ul style="font-weight: bolder; color:greenyellow">Air Carriers can
             <li>File AMS</li>
             <li>Cargo Manifest Status Query</li>
@@ -174,7 +174,7 @@
         Sea Carriers
       </mat-card-title>
     </mat-card-header>
-    <mat-card-content style="background-image: url('https://cdn.pixabay.com/photo/2018/01/14/15/53/hamburg-3082070_960_720.jpg') ">
+    <mat-card-content style="background-image: url('https://cdn.pixabay.com/photo/2018/01/14/15/53/hamburg-3082070_960_720.jpg'); background-size: contain; ">
       <ul style="font-weight: bolder; color:magenta">Sea Carriers can
         <li>File AMS</li>
         <li>Shipment Status</li>
@@ -194,7 +194,7 @@
         Other Service Providers
     </mat-card-title>
   </mat-card-header>
-  <mat-card-content style="background-image: url('https://cdn.pixabay.com/photo/2015/07/30/11/35/boeing-747-867517_960_720.jpg') ">
+  <mat-card-content style="background-image: url('https://cdn.pixabay.com/photo/2022/01/15/02/07/windows-6938478_960_720.jpg'); background-size: contain; ">
         <ul style="font-weight: bolder; color:darkkhaki">Other Service Providers can
           <li>Upload documents</li>
           <li>Download documents</li>
@@ -215,3 +215,4 @@
     Logged in!!
   </div>
   <footer>&copy; Coprighted by ANA Link - 2022</footer>
+ 
