--- a/src/app/account/register/register.component.html
+++ b/src/app/account/register/register.component.html
@@ -1,143 +1,73 @@
 <div class="container">
 
-<div class="login-wrapper"  fxLayoutAlign="center center">
-  <mat-card class="example-card" >
-    <mat-card-header>
-      <mat-card-title>Log in</mat-card-title>
-    </mat-card-header>
-    <form class="example-form">
-      <mat-card-content>
-        <mat-form-field appearance="fill">
-          <input matInput placeholder="Username">
-        </mat-form-field>
-        <mat-form-field appearance ="fill">
-          <input matInput placeholder="Password">
-        </mat-form-field>
-      </mat-card-content>
-      <button mat-stroked-button color="accent" class="btn-block">Log in</button>
-    </form>
-  </mat-card>
+  <header>
+    <!-- Header -->
+    <h1 style="font-weight: bolder; text-align: center;">Manufacturers/Shippers</h1>
+  </header>
+
+  <main>
+    <!-- Main Content -->
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+      Iste voluptates sint excepturi non nam ratione velit libero eius,
+      asperiores, temporibus vero beatae perspiciatis maxime iure repellat
+      quam ut ducimus maiores!
+    </p>
+  </main>
+
+  <aside>
+    <mat-card class="example-card" >
+      <mat-card-header>
+        <mat-card-title>Log in</mat-card-title>
+      </mat-card-header>
+      <form class="example-form">
+        <mat-card-content>
+          <mat-form-field appearance="fill">
+            <input matInput placeholder="Username">
+          </mat-form-field>
+          <mat-form-field appearance ="fill">
+            <input matInput placeholder="Password">
+          </mat-form-field>
+        </mat-card-content>
+        <button mat-stroked-button color="accent" class="btn-block">Log in</button>
+      </form>
+    </mat-card>
+    <mat-divider></mat-divider>
+
+    <mat-card class="example-card">
+      <mat-card-header>
+        <mat-card-title>Register</mat-card-title>
+      </mat-card-header>
+      <form class="example-form">
+        <mat-card-content>
+          <mat-form-field appearance="fill">
+            <input matInput placeholder="Username">
+          </mat-form-field>
+          <mat-form-field appearance="fill">
+            <input matInput placeholder="Email">
+          </mat-form-field>
+          <mat-form-field appearance="fill">
+            <input matInput placeholder="Password">
+          </mat-form-field>
+          <mat-form-field appearance="fill">
+            <mat-label>Choose a role...</mat-label>
+            <mat-select>
+              <mat-option [value]="roles" *ngFor="let roles of Roles">{{roles}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+        </mat-card-content>
+        <button mat-stroked-button color="accent" class="btn-block">Register</button>
+      </form>
+    </mat-card>
+  
+  </aside>
+  <footer>
+    <!-- Footer -->
+    <span>
+      Copyright 2019-2020
+  </span>
+  </footer>
+
 </div>
-<mat-divider></mat-divider>
-
-<div class="login-wrapper" fxLayoutAlign="center center">
-  <mat-card class="example-card">
-    <mat-card-header>
-      <mat-card-title>Register</mat-card-title>
-    </mat-card-header>
-    <form class="example-form">
-      <mat-card-content>
-        <mat-form-field appearance="fill">
-          <input matInput placeholder="Username">
-        </mat-form-field>
-        <mat-form-field appearance="fill">
-          <input matInput placeholder="Email">
-        </mat-form-field>
-        <mat-form-field appearance="fill">
-          <input matInput placeholder="Password">
-        </mat-form-field>
-        <mat-form-field appearance="fill">
-          <mat-label>Choose a role...</mat-label>
-          <mat-select>
-            <mat-option [value]="roles" *ngFor="let roles of Roles">{{roles}}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
-      </mat-card-content>
-      <button mat-stroked-button color="accent" class="btn-block">Register</button>
-    </form>
-  </mat-card>
-</div>
-
-</div>
 
 
-<!-- 
-<div class="container col-md-3">
-  <div class="card" style="margin-top: 200px;">
-    <img
-      id="profile-img"
-      src="//ssl.gstatic.com/accounts/ui/avatar_2x.png"
-      class="profile-img-card"
-      style="max-height: 200px;"
-    />
-    <form
-      *ngIf="!isSuccessful"
-      name="form"
-      (ngSubmit)="f.form.valid && onSubmit()"
-      #f="ngForm"
-      novalidate
-    >
-      <div class="form-group">
-        <label for="username">Username</label>
-        <input
-          type="text"
-          class="form-control"
-          name="username"
-          [(ngModel)]="form.username"
-          required
-          minlength="3"
-          maxlength="20"
-          #username="ngModel"
-        />
-        <div class="alert-danger" *ngIf="username.errors && f.submitted">
-          <div *ngIf="username.errors['required']">Username is required</div>
-          <div *ngIf="username.errors['minlength']">
-            Username must be at least 3 characters
-          </div>
-          <div *ngIf="username.errors['maxlength']">
-            Username must be at most 20 characters
-          </div>
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input
-          type="email"
-          class="form-control"
-          name="email"
-          [(ngModel)]="form.email"
-          required
-          email
-          #email="ngModel"
-        />
-        <div class="alert-danger" *ngIf="email.errors && f.submitted">
-          <div *ngIf="email.errors['required']">Email is required</div>
-          <div *ngIf="email.errors['email']">
-            Email must be a valid email address
-          </div>
-        </div>
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input
-          type="password"
-          class="form-control"
-          name="password"
-          [(ngModel)]="form.password"
-          required
-          minlength="6"
-          #password="ngModel"
-        />
-        <div class="alert-danger" *ngIf="password.errors && f.submitted">
-          <div *ngIf="password.errors['required']">Password is required</div>
-          <div *ngIf="password.errors['minlength']">
-            Password must be at least 6 characters
-          </div>
-        </div>
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary btn-block">Sign Up</button>
-      </div>
-
-      <div class="alert alert-warning" *ngIf="f.submitted && isSignUpFailed">
-        Signup failed!<br />{{ errorMessage }}
-      </div>
-    </form>
-
-    <div class="alert alert-success" *ngIf="isSuccessful">
-      Your registration is successful!
-    </div>
-  </div>
-</div>
- -->
