updated isf grid component

--- a/src/app/pages/isf/isf-grid/isf-grid.component.html
+++ b/src/app/pages/isf/isf-grid/isf-grid.component.html
@@ -4,9 +4,10 @@
     [rowData]="rowData"
     [columnDefs]="columnDefs"
     [pagination]=true
-    [paginationPageSize]=10
+    [paginationPageSize]=20
     [animateRows]=true
     [sideBar]="true"
+    [colWidth]="120"
 
 >
 </ag-grid-angular>
