updated ai-grid customs-b grid

--- a/src/app/pages/air-import/ai-grid/ai-grid.component.html
+++ b/src/app/pages/air-import/ai-grid/ai-grid.component.html
@@ -7,6 +7,6 @@
     [paginationPageSize]=10
     [animateRows]=true
     [sideBar]="true"
-
+    [rowSelection]="rowSelection"
 >
 </ag-grid-angular>
