--- a/src/app/pages/isf/isf-grid/isf-grid.component.html
+++ b/src/app/pages/isf/isf-grid/isf-grid.component.html
@@ -8,6 +8,7 @@
     [animateRows]=true
     [sideBar]="true"
     [colWidth]="120"
-
+    [rowSelection]="rowSelection"
+    (rowClicked)="onGridReady($event)"
 >
 </ag-grid-angular>
