--- a/src/app/pages/isf/isf-detail/isf-detail.component.html
+++ b/src/app/pages/isf/isf-detail/isf-detail.component.html
@@ -1,1 +1,9 @@
-<p>isf-detail works!</p>
+<h1 style="font-weight: bolder; background-color: rgb(255, 0, 170); text-align: center;">Importer Security Detail</h1>
+
+
+<div>
+  <app-shipment></app-shipment>
+  <app-parties></app-parties>
+</div>
+
+<button type="button" class="btn btn-link" routerLink="/nav/">Back to Mainpage</button>
