--- a/src/app/pages/isf/isf-grid/isf-grid.component.html
+++ b/src/app/pages/isf/isf-grid/isf-grid.component.html
@@ -9,6 +9,7 @@
     [sideBar]="true"
     [colWidth]="120"
     [rowSelection]="rowSelection"
-    (rowClicked)="onGridReady($event)"
+    (rowClicked)="onRowClicked($event)"
 >
 </ag-grid-angular>
+
