--- a/src/app/pages/isf/parties/parties.component.html
+++ b/src/app/pages/isf/parties/parties.component.html
@@ -1,28 +1,31 @@
-<div fxLayout="row" fxLayoutAlign="space-around center">
-    <mat-card fxFlex="33">
+<div fxLayout="row" fxLayoutAlign="space-around center" fxLayoutGap="20px">
+    <mat-card fxFlex="25">
         <mat-card-title>Selling Party</mat-card-title>
         <mat-card-content><app-foreign></app-foreign></mat-card-content>
       </mat-card>
       <br>
-    
-      <mat-card fxFlex="33">
+
+      <mat-card fxFlex="25">
         <mat-card-title>Consolidator Stuffing Location</mat-card-title>
         <mat-card-content><app-foreign></app-foreign></mat-card-content>
       </mat-card>
-    
-      <mat-card fxFlex="33">
+
+      <mat-card fxFlex="25">
         <mat-card-title>Consolidator</mat-card-title>
         <mat-card-content><app-foreign></app-foreign></mat-card-content>
       </mat-card>
+
+      <mat-card fxFlex="25">
+        <mat-card-title>Importer of Record</mat-card-title>
+        <mat-card-content><app-domestic></app-domestic></mat-card-content>
+      </mat-card>
+
+
       <br>
 </div>
 <mat-divider></mat-divider>
 
-<div fxLayout="row" fxLayoutAlign="space-around center">
-  <mat-card fxFlex="33">
-    <mat-card-title>Importer of Record</mat-card-title>
-    <mat-card-content><app-domestic></app-domestic></mat-card-content>
-  </mat-card>
+<div fxLayout="row" fxLayoutAlign="space-around center" fxLayoutGap="20px">
 
   <mat-card fxFlex="33">
     <mat-card-title>Consignee</mat-card-title>
@@ -33,12 +36,10 @@
     <mat-card-title>Buying Party</mat-card-title>
     <mat-card-content><app-domestic></app-domestic></mat-card-content>
   </mat-card>
-</div>
-<mat-divider></mat-divider>
-
-<div fxLayout="row" fxLayoutAlign="space-around center">
-  <mat-card fxFlex="50">
+  <br>
+  <mat-card fxFlex="33">
     <mat-card-title>Ship To</mat-card-title>
     <mat-card-content><app-domestic></app-domestic></mat-card-content>
   </mat-card>
 </div>
+<mat-divider></mat-divider>
