update entry-detail component

--- a/src/app/pages/customs-brokerage/entry-detail/entry-detail.component.html
+++ b/src/app/pages/customs-brokerage/entry-detail/entry-detail.component.html
@@ -5,7 +5,10 @@
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="javascript:;">Shipment Details</a></li>
-      <li class="breadcrumb-item active" aria-current="page">Invoice Details</li>
+      <li class="breadcrumb-item"><a href="javascript:;">Invoice Details</a></li>
+      <li class="breadcrumb-item"><a href="javascript:;">HTSUSA Details</a></li>
+      <li class="breadcrumb-item"><a href="javascript:;">PGA Details</a></li>
+      <li class="breadcrumb-item"><a href="javascript:;">ABI History</a></li>
     </ol>
   </nav>
 </div>
