--- a/src/app/pages/sea-ams/sea-ams.component.scss
+++ b/src/app/pages/sea-ams/sea-ams.component.scss
@@ -28,3 +28,17 @@ div.container > div {
 mat-form-field {
   margin-right: 12px;
 }
+
+fieldset {
+  background-color: #eeeeee;
+}
+
+legend {
+  background-color: gray;
+  color: white;
+  padding: 5px 10px;
+}
+
+input {
+  margin: 5px;
+}
