--- a/src/app/pages/air-ams/ams-detail/ams-detail.component.html
+++ b/src/app/pages/air-ams/ams-detail/ams-detail.component.html
@@ -1,7 +1,3 @@
-<<<<<<< HEAD
-=======
-<h1>Air AMS</h1>
->>>>>>> 525b09ad8aa8bdb721b359b4a182ab3791c60172
 <mat-card fxLayout='row' fxLayoutAlign = 'space-around center' style="background-color:lightblue">
   <mat-card-header>
     <mat-card-title>Air AMS Transaction No: </mat-card-title>
@@ -21,7 +17,19 @@
       </mat-form-field>
       <mat-form-field class="col-md-4" appearance='fill'>
         <mat-label>B/L Type</mat-label>
-        <input matInput placeholder="B/L Type" formControlName="blType">
+        <select matNativeControl required placeholder="B/L Type" formControlName="blType">
+          <option value="">0 - Regular Bill</option>
+          <option value="">2 - Empty equipment instrucments </option>
+          <option value="">B - Regular Bill Foreign Retained On Board(FROB)</option>
+          <option value="">M - Master Vessel Operating Common Carrier (MVOCC)</option>
+          <option value="">N = Non Vessel Operating Common Carrier(NVOCC)</option>
+          <option value="">O - Master Vessel Operating Common Carrier-FROB (MVOCC-FROB) </option>
+          <option value="">P - Non-Vessel Operating Common Carrier-FROB (MVOCC-FROB) </option>
+          <option value="">Q - Regular Bill FROB + Importer Security Filing</option>
+          <option value="">R - House FROB + Importer Security Filing</option>
+          <option value="">S - House Bill + Importer Security Filing</option>
+          <option value="">T - In-bond Type 62/53 with Importer Security Filing </option>
+        </select>
       </mat-form-field>
       <mat-form-field class="col-md-6" appearance='fill'>
         <mat-label>Booking No</mat-label>
@@ -269,6 +277,15 @@
         <mat-label>Amend Flag</mat-label>
         <input matInput placeholder="Amend Flag" formControlName="amendFlag">
       </mat-form-field>
+
+      <mat-radio-group
+        aria-labelledby="example-radio-group-label"
+        class="example-radio-group"
+        [(ngModel)]="amendReason">
+       <mat-radio-button class="example-radio-button" *ngFor="let amend of amends" [value]="amend">
+             {{amend}}
+        </mat-radio-button>
+      </mat-radio-group>
       <mat-form-field class="col-md-8" appearance='fill'>
         <mat-label>Amend Reason</mat-label>
         <input matInput placeholder="Amend Reason" formControlName="reason">
