added some ng2 charts

--- a/src/app/extrapages/chart01/chart01.component.html
+++ b/src/app/extrapages/chart01/chart01.component.html
@@ -1,4 +1,5 @@
-<canvas id="myChart" width="400" height="400"></canvas>
+<canvas id="myChart" width="400" height="400"> My Chart</canvas>
+<h1>My Chart</h1>
 <script>
 const ctx = document.getElementById('myChart').getContext('2d');
 const myChart = new Chart(ctx, {
@@ -36,4 +37,3 @@ const myChart = new Chart(ctx, {
     }
 });
 </script>
- 
