reinstalled package.json

--- a/src/app/widgets/radar-chart/radar-chart.component.html
+++ b/src/app/widgets/radar-chart/radar-chart.component.html
@@ -1,6 +1,8 @@
-<div style="display: block">
-  <canvas baseChart
+<div style="display: block"  >
+  <canvas
+          baseChart
           [datasets]="radarChartData"
           [labels]="radarChartLabels"
-          [type]="'radar'"></canvas>
+          [type]="'radar'">
+  </canvas>
 </div>
