--- a/src/app/widgets/donut-chart/donut-chart.component.html
+++ b/src/app/widgets/donut-chart/donut-chart.component.html
@@ -3,12 +3,14 @@
   <apx-chart
     [series]="chartOptions.series"
     [chart]="chartOptions.chart"
-    [xaxis]="chartOptions.xaxis"
-    [fill]="chartOptions.fill"
+    [labels]="chartOptions.labels"
     [dataLabels]="chartOptions.dataLabels"
     [title]="chartOptions.title"
-    [yaxis]="chartOptions.yaxis"
-    [tooltip]="chartOptions.tooltip"
+    [fill]="chartOptions.fill"
+    [states]="chartOptions.states"
+    [plotOptions]="chartOptions.plotOptions"
+    [stroke]="chartOptions.stroke"
     [theme]="chartOptions.theme"
+    [responsive]="chartOptions.responsive"
   ></apx-chart>
 </div>
