--- a/src/app/extrapages/chart01/chart01.component.html
+++ b/src/app/extrapages/chart01/chart01.component.html
@@ -1,39 +1,62 @@
-<canvas id="myChart" width="400" height="400"> My Chart</canvas>
-<h1>My Chart</h1>
-<script>
-const ctx = document.getElementById('myChart').getContext('2d');
-const myChart = new Chart(ctx, {
-    type: 'bar',
-    data: {
-        labels: ['Red', 'Blue', 'Yellow', 'Green', 'Purple', 'Orange'],
-        datasets: [{
-            label: '# of Votes',
-            data: [12, 19, 3, 5, 2, 3],
-            backgroundColor: [
-                'rgba(255, 99, 132, 0.2)',
-                'rgba(54, 162, 235, 0.2)',
-                'rgba(255, 206, 86, 0.2)',
-                'rgba(75, 192, 192, 0.2)',
-                'rgba(153, 102, 255, 0.2)',
-                'rgba(255, 159, 64, 0.2)'
-            ],
-            borderColor: [
-                'rgba(255, 99, 132, 1)',
-                'rgba(54, 162, 235, 1)',
-                'rgba(255, 206, 86, 1)',
-                'rgba(75, 192, 192, 1)',
-                'rgba(153, 102, 255, 1)',
-                'rgba(255, 159, 64, 1)'
-            ],
-            borderWidth: 1
-        }]
-    },
-    options: {
-        scales: {
-            y: {
-                beginAtZero: true
-            }
-        }
-    }
-});
-</script>
+<mat-card class="example-card">
+  <mat-card-title-group>
+    <mat-card-title>Bar Chart</mat-card-title>
+  </mat-card-title-group>
+  <mat-card-content>
+    <app-bar-chart></app-bar-chart>
+  </mat-card-content>
+</mat-card>
+
+<mat-card class="example-card">
+  <mat-card-title-group>
+    <mat-card-title>Bubble Chart</mat-card-title>
+  </mat-card-title-group>
+  <mat-card-content>
+    <app-bubble-chart></app-bubble-chart>
+  </mat-card-content>
+</mat-card>
+
+<mat-card class="example-card">
+  <mat-card-title-group>
+    <mat-card-title>Radar Chart</mat-card-title>
+  </mat-card-title-group>
+  <mat-card-content>
+    <app-radar-chart></app-radar-chart>
+  </mat-card-content>
+</mat-card>
+
+<mat-card class="example-card">
+  <mat-card-title-group>
+    <mat-card-title>Apex Chart</mat-card-title>
+  </mat-card-title-group>
+  <mat-card-content>
+    <app-apex-chart></app-apex-chart>
+  </mat-card-content>
+</mat-card>
+
+<mat-card class="example-card">
+  <mat-card-title-group>
+    <mat-card-title>Brush  Chart</mat-card-title>
+  </mat-card-title-group>
+  <mat-card-content>
+    <app-brush-chart></app-brush-chart>
+  </mat-card-content>
+</mat-card>
+
+<mat-card class="example-card">
+  <mat-card-title-group>
+    <mat-card-title>Donut Chart</mat-card-title>
+  </mat-card-title-group>
+  <mat-card-content>
+    <app-donut-chart></app-donut-chart>
+  </mat-card-content>
+</mat-card>
+
+<mat-card class="example-card">
+  <mat-card-title-group>
+    <mat-card-title>Donut Monochrome Chart</mat-card-title>
+  </mat-card-title-group>
+  <mat-card-content>
+    <app-donut-monochrome></app-donut-monochrome>
+  </mat-card-content>
+</mat-card>
