--- a/src/app/widgets/donut-monochrome/donut-monochrome.component.html
+++ b/src/app/widgets/donut-monochrome/donut-monochrome.component.html
@@ -3,12 +3,9 @@
   <apx-chart
     [series]="chartOptions.series"
     [chart]="chartOptions.chart"
-    [xaxis]="chartOptions.xaxis"
-    [fill]="chartOptions.fill"
-    [dataLabels]="chartOptions.dataLabels"
+    [labels]="chartOptions.labels"
     [title]="chartOptions.title"
-    [yaxis]="chartOptions.yaxis"
-    [tooltip]="chartOptions.tooltip"
     [theme]="chartOptions.theme"
+    [responsive]="chartOptions.responsive"
   ></apx-chart>
 </div>
