Added polar chart

--- a/src/app/extrapages/chart01/chart01.component.html
+++ b/src/app/extrapages/chart01/chart01.component.html
@@ -60,3 +60,12 @@
     <app-donut-monochrome></app-donut-monochrome>
   </mat-card-content>
 </mat-card>
+
+<mat-card class="example-card">
+  <mat-card-title-group>
+    <mat-card-title>Polar Area Chart</mat-card-title>
+  </mat-card-title-group>
+  <mat-card-content>
+    <app-polar-chart></app-polar-chart>
+  </mat-card-content>
+</mat-card>
